Replace Java deprecated methods
* These are deprecated since Java 9